修改网站名称

--- a/templates/header.html
+++ b/templates/header.html
@@ -2,5 +2,5 @@
 {% load staticfiles %}
 <div class="well">
 {#    <img src="{% static 'images/logo.jpeg' %}">#}
-    <h1 style="font-family: 微软雅黑;">第i秒月光的个人站</h1>
+    <h1 style="font-family: 微软雅黑;">月光俱乐部</h1>
 </div>
